[gd_scene load_steps=5 format=2]

[ext_resource path="res://Networking/WorldToPlayer.gd" type="Script" id=1]
[ext_resource path="res://Networking/GateWayToPlayer.gd" type="Script" id=3]
[ext_resource path="res://Networking/NetworkHead.gd" type="Script" id=4]
[ext_resource path="res://Networking/MatchMakerToPlayer.gd" type="Script" id=5]

[node name="NetworkingHead" type="Node2D"]
script = ExtResource( 4 )

[node name="WorldToPlayer" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="GateWayToPlayer" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="MatchMakerToPlayer" type="Node2D" parent="."]
script = ExtResource( 5 )
